dev/dev-openlist/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-openlist
  labels:
    app.kubernetes.io/name: openlist
