dev/dev-openlist/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openlist
  labels:
    app: openlist
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - openlist.clusters.zjusct.io
    - openlist.s.zjusct.io
  rules:
    - backendRefs:
        - name: openlist
          port: 5244
